--- a/templates/admin/_nav.html.twig
+++ b/templates/admin/_nav.html.twig
@@ -15,7 +15,7 @@
                     Clients
                 </a>
                 <div class="dropdown-menu" aria-labelledby="DropdownClient">
-                    <a class="dropdown-item" href="{{ path('user.showAllUser') }}">Gestions des clients</a>
+                    <a class="dropdown-item" href="">Gestions des clients</a>
                 </div>
             </li>
 
@@ -26,11 +26,11 @@
                     BDD
                 </a>
                 <div class="dropdown-menu" aria-labelledby="DropdownProduits">
-                    <a class="dropdown-item" href="{{ path('') }}">Gestion des Armes</a>
-                    <a class="dropdown-item" href="{{ path('') }}"> Gestion des Armures</a>
-                    <a class="dropdown-item" href="{{ path('') }}"> Gestion des Ennemis</a>
-                    <a class="dropdown-item" href="{{ path('') }}"> Gestion des Potions</a>
-                    <a class="dropdown-item" href="{{ path('') }}"> Gestion des Types d'armures</a>
+                    <a class="dropdown-item" href="{{ path('arme_index') }}">Gestion des Armes</a>
+                    <a class="dropdown-item" href="{{ path('armure_index') }}"> Gestion des Armures</a>
+                    <a class="dropdown-item" href="{{ path('ennemi_index') }}"> Gestion des Ennemis</a>
+                    <a class="dropdown-item" href="{{ path('potion_index') }}"> Gestion des Potions</a>
+                    <a class="dropdown-item" href="{{ path('type_index') }}"> Gestion des Types d'armures</a>
                 </div>
             </li>
         </ul>
