infos et download du jeu

--- a/templates/_nav_home.html.twig
+++ b/templates/_nav_home.html.twig
@@ -13,7 +13,7 @@
                     Le jeu
                 </a>
                 <div class="dropdown-menu" aria-labelledby="DropdownCommandes">
-                    <a class="dropdown-item" href="">Informations sur le jeu</a>
+                    <a class="dropdown-item" href="{{ path('infos') }}">Informations sur le jeu</a>
                 </div>
             </li>
         </ul>
