--- a/templates/admin/bdd/showArmes.html.twig
+++ b/templates/admin/bdd/showArmes.html.twig
@@ -23,7 +23,7 @@
                             <td>{{arme.nom}}</td>
                             <td>{{arme.id}}</td><td>{{arme.degats}}</td><td>{{arme.rarete}}</td><td>
                                 {{arme.sprite}}</td><td>
-                                <img style="width:40px;height:40px" src="{{asset('images/')}}{{arme.sprite}}" alt="image du produit" >
+                                <img style="width:40px;height:40px" src="{{asset('sprites/armes/')}}{{arme.sprite}}" alt="image du produit" >
                             </td>
                             <td>
                                 <a href="{{ path('arme_edit', {id: arme.id}) }}" class="btn btn-primary">modifier</a>
