--- a/templates/_nav_home.html.twig
+++ b/templates/_nav_home.html.twig
@@ -21,12 +21,12 @@
         <ul class="nav navbar-nav navbar-right">
             <!-- Authentication Links -->
             {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-                <span class="navbar-text">
-                    Bonjour {{ app.user.username }}
-                    {% if is_granted('ROLE_ADMIN') %} (role : Admin )
-                    {% elseif is_granted('ROLE_CLIENT') %} (role : Client ) {% endif %}
+            <span class="navbar-text">
+                Bonjour {{ app.user.username }}
+                {% if is_granted('ROLE_ADMIN') %} (role : Admin )
+                {% elseif is_granted('ROLE_USER') %} (role : User ) {% endif %}
             </span>
-            <div class="vl"></div>
+                &ensp;
             <a class="btn btn-outline-success" type="button" href="{{path('app_logout') }}">
                 Se déconnecter
             </a>
