--- a/templates/user/inventory.html.twig
+++ b/templates/user/inventory.html.twig
@@ -3,22 +3,51 @@
     <div class="container-fluid" style="background-color: lightgray">
         <br>
         <div class="container-xl" style="background-color: deepskyblue;white-space: nowrap">
-            <br><br><br><br><br><br><br>
-            <img style="width:250px;height:250px" src="{{asset('sprites/personnage/personnage.png')}}" alt="image du personnage">
-            <div class="container-xxl float-right" style="background-color: #b8daff">
-                <img style="width:50px;height:50px" src="{{asset('sprites/armes/epee.png')}}" alt="sprite">&ensp;
+            <br><br><br><br><br><br>
+            <div class="row">
+                <img style="width:275px;height:275px" src="{{asset('sprites/personnage/personnage.png')}}" alt="image du personnage">
+                <div class="container-xs col-sm-1" style="background-color: #b8daff;border-radius: 10px 0 0 10px;">
+                    <div>
+                        <br>
+                        <img style="width:50px;height:50px" src="{{asset('sprites/armures/casque.png')}}" alt="sprite"><br><br>
+                        <img style="width:50px;height:50px" src="{{asset('sprites/armures/plastronD.png')}}" alt="sprite"><br><br>
+                        <img style="width:50px;height:50px" src="{{asset('sprites/armures/jambières.png')}}" alt="sprite"><br><br>
+                        <img style="width:50px;height:50px" src="{{asset('sprites/armures/botte.png')}}" alt="sprite"><br><br>
+                    </div>
+                </div>
+                <div class="container-xs col-sm-1" style="background-color: #b8daff;border-radius: 0 10px 10px 0;">
+                    <div>
+                        <br>
+                        <img style="width:50px;height:50px" src="{{asset('sprites/armes/epeeEnchant.png')}}" alt="sprite"><br><br>
+                        <img style="width:50px;height:50px" src="{{asset('sprites/potions/potion.png')}}" alt="sprite"><br><br>
+                        <h6>Argent : </h6><br><br>
+                        <h6>PV :</h6>
+                    </div>
+                </div>
+                <div class="container-xs col-sm-1" style="background-color: deepskyblue"></div>
+                <div class="container-xs col-sm-1" style="background-color: #FFBA33;border-radius: 10px 0 0 10px;"></div>
+                <div class="container-xs col-sm-4" style="background-color: #FFBA33;border-radius:0 10px 10px 0;">
+                    <div>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <div style="background-color: #b8daff;width:50px;height:50px" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+                    </div>
+                </div>
             </div>
-
             <br><br><br><br><br>
-            <div class="container-fluid" style="background-color: palevioletred;white-space: nowrap;overflow-x: scroll;overflow-y: hidden;">
+            <div class="container-fluid" style="background-color: palevioletred;white-space: nowrap;overflow-x: scroll;overflow-y: hidden;border-radius: 10px;">
                 <br>
                 <div>
-                    <img style="width:50px;height:50px" src="{{asset('sprites/armes/epee.png')}}" alt="sprite">&ensp;
-                    <img style="width:50px;height:50px" src="{{asset('sprites/armes/epeeEnchent.png')}}" alt="sprite">&ensp;
-                    <img style="width:50px;height:50px" src="{{asset('sprites/armures/botte.png')}}" alt="sprite">&ensp;
-                    <img style="width:50px;height:50px" src="{{asset('sprites/armures/plastronD.png')}}" alt="sprite">&ensp;
-                    <img style="width:50px;height:50px" src="{{asset('sprites/potions/potion.png')}}" alt="sprite">&ensp;
-                    <img style="width:50px;height:50px" src="{{asset('sprites/potions/potionV.png')}}" alt="sprite">
+                    <img style="width:50px;height:50px" src="{{asset('sprites/armes/epee.png')}}" alt="sprite" draggable="true" ondragstart="drag(event)">&ensp;
+                    <img style="width:50px;height:50px" src="{{asset('sprites/armes/epeeEnchant.png')}}" alt="sprite" draggable="true" ondragstart="drag(event)">&ensp;
+                    <img style="width:50px;height:50px" src="{{asset('sprites/armures/botte.png')}}" alt="sprite" draggable="true" ondragstart="drag(event)">&ensp;
+                    <img style="width:50px;height:50px" src="{{asset('sprites/armures/plastronD.png')}}" alt="sprite" draggable="true" ondragstart="drag(event)">&ensp;
+                    <img style="width:50px;height:50px" src="{{asset('sprites/potions/potion.png')}}" alt="sprite" draggable="true" ondragstart="drag(event)">&ensp;
+                    <img style="width:50px;height:50px" src="{{asset('sprites/potions/potionV.png')}}" alt="sprite" draggable="true" ondragstart="drag(event)">
                     <br>
                 </div>
                 <br>
@@ -26,4 +55,23 @@
         </div>
         <br>
     </div>
+    <script>
+
+        declare var event: DragEvent;
+        function allowDrop(ev) {
+            ev.preventDefault();
+            ev.dataTransfer.dropEffect = "move"
+        }
+
+        function drag(ev) {
+            ev.dataTransfer.setData("text", ev.target.id);
+            ev.dataTransfer.dropEffect = "move";
+        }
+
+        function drop(ev) {
+            ev.preventDefault();
+            let data = ev.dataTransfer.getData("text");
+            ev.target.appendChild(document.getElementById(data));
+        }
+    </script>
 {% endblock %}
