--- a/templates/admin/_nav.html.twig
+++ b/templates/admin/_nav.html.twig
@@ -2,25 +2,13 @@
 
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">TP web <span style="color:#ff0000;">  Menu Admin </span></a>
+    <a class="navbar-brand" href="#">Projet Tut <span style="color:#ff0000;">  Menu Admin </span></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" id="DropdownClient" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Clients
-                </a>
-                <div class="dropdown-menu" aria-labelledby="DropdownClient">
-                    <a class="dropdown-item" href="">Gestions des clients</a>
-                </div>
-            </li>
-
-
-
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="DropdownEvenements" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     BDD
