--- a/templates/admin/bdd/showPotions.html.twig
+++ b/templates/admin/bdd/showPotions.html.twig
@@ -23,7 +23,7 @@
                             <td>{{potion.nom}}</td>
                             <td>{{potion.id}}</td><td>{{potion.effet}}</td><td>{{potion.valeur}}</td><td>{{potion.rarete}}</td><td>
                                 {{potion.sprite}}</td><td>
-                                <img style="width:40px;height:40px" src="{{asset('sprites/potions')}}{{potion.sprite}}" alt="image du produit" >
+                                <img style="width:40px;height:40px" src="{{asset('sprites/potions')}}{{potion.sprite}}" alt="sprite" >
                             </td>
                             <td>
                                 <a href="{{ path('potion_edit', {id: potion.id}) }}" class="btn btn-primary">modifier</a>
