Form sprites + début shop

--- a/templates/user/_nav_user.html.twig
+++ b/templates/user/_nav_user.html.twig
@@ -23,6 +23,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="DropdownCommandes">
                     <a class="dropdown-item" href="{{ path('inventory') }}">Votre inventaire</a>
+                    <a class="dropdown-item" href="{{ path('shop') }}">Magasin</a>
                 </div>
             </li>
         </ul>
