--- a/templates/admin/bdd/_form.html.twig
+++ b/templates/admin/bdd/_form.html.twig
@@ -1,5 +1,11 @@
 {% extends "admin/layout.html.twig" %}
 {% block body %}
+        <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"></script>
+        <script>
+                $(document).ready(function () {
+                        bsCustomFileInput.init()
+                })
+        </script>
         <div class="container">
                 <br><h1>{{ action }} {{ element }}</h1><br>
                 {% form_theme form 'bootstrap_4_layout.html.twig' %}
