--- a/templates/user/inventory.html.twig
+++ b/templates/user/inventory.html.twig
@@ -3,54 +3,52 @@
     <script>
         declare var event: DragEvent;
     </script>
-    <div class="container-fluid" style="background-color: lightgray">
-        <br>
-        <div class="container-xl" style="background-color: deepskyblue;white-space: nowrap">
-            <br><br><br><br><br><br>
+    <div class="container-fluid">
+        <br><br><br>
+        <div class="container-xl" style="background-color: #b8daff;white-space: nowrap">
+            <br><h1 style="color:#78ade6">&nbsp;&nbsp;Votre Inventaire</h1><br><br>
             <div class="row">
                 <img style="width:275px;height:275px" src="{{asset('sprites/personnage/personnage.png')}}" alt="image du personnage">
-                <div class="container-xs col-sm-1" style="background-color: #b8daff;border-radius: 10px 0 0 10px;">
+                <div class="container-xs col-sm-1" style="background-color: #cbb8ff;border-radius: 10px 0 0 10px;">
                     <div>
                         <br>
-                        <img style="width:50px;height:50px" src="{{asset('sprites/armures/casque.png')}}" alt="sprite"><br><br>
-                        <img style="width:50px;height:50px" src="{{asset('sprites/armures/plastronD.png')}}" alt="sprite"><br><br>
-                        <img style="width:50px;height:50px" src="{{asset('sprites/armures/jambières.png')}}" alt="sprite"><br><br>
-                        <img style="width:50px;height:50px" src="{{asset('sprites/armures/botte.png')}}" alt="sprite"><br><br>
+                        <div id="drop1" style="width:50px;height:50px;margin-bottom: 14px" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+                        <div id="drop2" style="width:50px;height:50px;margin-bottom: 14px" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+                        <div id="drop3" style="width:50px;height:50px;margin-bottom: 14px" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+                        <div id="drop4" style="width:50px;height:50px;margin-bottom: 14px" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
                     </div>
                 </div>
-                <div class="container-xs col-sm-1" style="background-color: #b8daff;border-radius: 0 10px 10px 0;">
+                <div class="container-xs col-sm-1" style="background-color: #cbb8ff;border-radius: 0 10px 10px 0;">
                     <div>
                         <br>
-                        <img style="width:50px;height:50px" src="{{asset('sprites/armes/epeeEnchant.png')}}" alt="sprite"><br><br>
-                        <img style="width:50px;height:50px" src="{{asset('sprites/potions/potion.png')}}" alt="sprite"><br><br>
+                        <div id="drop5" style="width:50px;height:50px;margin-bottom: 14px" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+                        <div id="drop6" style="width:50px;height:50px;margin-bottom: 14px" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
                         <h6>Argent : </h6><br><br>
                         <h6>PV :</h6>
                     </div>
                 </div>
-                <div class="container-xs col-sm-1" style="background-color: deepskyblue"></div>
-                <div class="container-xs col-sm-1" style="background-color: #FFBA33;border-radius: 10px 0 0 10px;"></div>
-                <div class="container-xs col-sm-4" style="background-color: #FFBA33;border-radius:0 10px 10px 0;">
-                    <div>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
+                <div class="container-xs col-sm-1" style="background-color: #b8daff"></div>
+                <div class="container-xs col-sm-4" style="background-color: #ffd3b8;border-radius:10px;">
+                    <br><h4>Informations sur l'objet</h4>
+                    <div style="margin-left: 70px;">
                         <br>
                         <br>
                         <div id="drop" style="background-color: #b8daff;width:50px;height:50px" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
                     </div>
                 </div>
             </div>
-            <br><br><br><br><br>
-            <div class="container-fluid" style="background-color: palevioletred;white-space: nowrap;overflow-x: scroll;overflow-y: hidden;border-radius: 10px;">
+            <br><br><br>
+            <div class="container-fluid" style="background-color: #ffd3b8;white-space: nowrap;overflow-x: scroll;overflow-y: hidden;border-radius: 10px;">
                 <br>
                 <div ondrop="drop(event)" ondragover="allowDrop(event)">
                     <img id="img1" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armes/epee.png')}}" alt="sprite" draggable="true" ondragstart="drag(event)">
                     <img id="img2" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armes/epeeEnchant.png')}}" alt="sprite" draggable="true" ondragstart="drag(event)">
                     <img id="img3" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armures/botte.png')}}" alt="sprite" draggable="true" ondragstart="drag(event)">
-                    <img id="img4" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armures/plastronD.png')}}" alt="sprite" draggable="true" ondragstart="drag(event)">
-                    <img id="img5" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/potions/potion.png')}}" alt="sprite" draggable="true" ondragstart="drag(event)">
-                    <img id="img6" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/potions/potionV.png')}}" alt="sprite" draggable="true" ondragstart="drag(event)">
+                    <img id="img4" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armures/jambières.png')}}" alt="sprite" draggable="true" ondragstart="drag(event)">
+                    <img id="img5" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armures/casque.png')}}" alt="sprite" draggable="true" ondragstart="drag(event)">
+                    <img id="img6" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armures/plastronD.png')}}" alt="sprite" draggable="true" ondragstart="drag(event)">
+                    <img id="img7" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/potions/potion.png')}}" alt="sprite" draggable="true" ondragstart="drag(event)">
+                    <img id="img8" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/potions/potionV.png')}}" alt="sprite" draggable="true" ondragstart="drag(event)">
                 </div>
                 <br>
             </div>
@@ -58,31 +56,20 @@
         <br>
     </div>
     <script>
-
+        user_pref("browser.display.use_document_colors", true);
         function allowDrop(ev) {
             ev.preventDefault();
         }
 
-        function drag2(ev) {
+        function drag(ev) {
             ev.dataTransfer.setData("image", ev.target.id);
         }
 
-        function drop2(ev) {
+        function drop(ev) {
             ev.preventDefault();
             let data = ev.dataTransfer.getData("image");
             ev.target.appendChild(document.getElementById(data));
         }
-        function drag(ev) {
-            ev.dataTransfer.setData("image",ev.target.id+"|"+ev.target.parentNode.id);
-        }
 
-        function drop(ev) {
-            let dropData = ev.dataTransfer.getData("image");
-            let dropItems = dropData.split("|");
-            let prevElem = document.getElementById(dropItems[1]);
-            prevElem.getElementsByTagName("div")[0].id = ev.target.id;
-            ev.target.appendChild(document.getElementById(dropItems[0]));
-            ev.preventDefault();
-        }
     </script>
 {% endblock %}
