--- a/templates/user/inventory.html.twig
+++ b/templates/user/inventory.html.twig
@@ -12,17 +12,17 @@
                 <div class="container-xs col-sm-1" style="background-color: #cbb8ff;border-radius: 10px 0 0 10px;">
                     <div>
                         <br>
-                        <div id="drop1" style="width:50px;height:50px;margin-bottom: 14px" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-                        <div id="drop2" style="width:50px;height:50px;margin-bottom: 14px" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-                        <div id="drop3" style="width:50px;height:50px;margin-bottom: 14px" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-                        <div id="drop4" style="width:50px;height:50px;margin-bottom: 14px" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+                        <div id="drop1" style="width:55px;height:55px;margin-bottom: 14px;border: solid;" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+                        <div id="drop2" style="width:55px;height:55px;margin-bottom: 14px;border: solid;" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+                        <div id="drop3" style="width:55px;height:55px;margin-bottom: 14px;border: solid;" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+                        <div id="drop4" style="width:55px;height:55px;margin-bottom: 14px;border: solid;" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
                     </div>
                 </div>
                 <div class="container-xs col-sm-1" style="background-color: #cbb8ff;border-radius: 0 10px 10px 0;">
                     <div>
                         <br>
-                        <div id="drop5" style="width:50px;height:50px;margin-bottom: 14px" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-                        <div id="drop6" style="width:50px;height:50px;margin-bottom: 14px" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+                        <div id="drop5" style="width:55px;height:55px;margin-bottom: 14px;border: solid;" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+                        <div id="drop6" style="width:55px;height:55px;margin-bottom: 14px;border: solid;" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
                         <h6>Argent : </h6><br><br>
                         <h6>PV :</h6>
                     </div>
@@ -33,7 +33,7 @@
                     <div style="margin-left: 70px;">
                         <br>
                         <br>
-                        <div id="drop" style="background-color: #b8daff;width:50px;height:50px" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+                        <div id="drop" style="width:55px;height:55px;margin-bottom: 14px;border: solid;" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
                     </div>
                 </div>
             </div>
