--- a/templates/accueil.html.twig
+++ b/templates/accueil.html.twig
@@ -1,7 +1,5 @@
 {% extends "layout_home.html.twig" %}
 {% block body %}
-
-	<h1> Accueil Site Projet Tuteuré  </h1>
-
+	<br><h1> Accueil Site Projet Tuteuré  </h1><br>
 {% endblock %}
 
