--- a/templates/infos.html.twig
+++ b/templates/infos.html.twig
@@ -2,7 +2,7 @@
 {% block body %}
 <div class="container">
     <br>
-    <div>Bla bla bla le jeu il est buggé haha c'est marrant </div>
-    <a href="{{ path('download') }}">TÉLÉCHARGE LE</a>
+    <div>Description du jeu, vous pouvez le télécharger ici : </div>
+    <a href="{{ path('download') }}">TÉLÉCHARGER</a>
 </div>
 {% endblock %}
