--- a/templates/_nav_home.html.twig
+++ b/templates/_nav_home.html.twig
@@ -1,6 +1,6 @@
 {#https://getbootstrap.com/docs/4.0/components/navbar/#}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Projet Tut <span style="color:#ff0000;"> Menu </span></a>
+    <a class="navbar-brand" href="http://127.0.0.1:8000/">Projet Tut <span style="color:#ff0000;"> Menu </span></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
