affichage vie & argent user

--- a/templates/user/_nav_user.html.twig
+++ b/templates/user/_nav_user.html.twig
@@ -22,7 +22,7 @@
                     Inventaire
                 </a>
                 <div class="dropdown-menu" aria-labelledby="DropdownCommandes">
-                    <a class="dropdown-item" href="{{ path('inventory') }}">Votre inventaire</a>
+                    <a class="dropdown-item" href="{{ path('inventaire_index') }}">Votre inventaire</a>
                     <a class="dropdown-item" href="{{ path('shop') }}">Magasin</a>
                 </div>
             </li>
