Affichage PV correct

--- a/templates/user/inventory.html.twig
+++ b/templates/user/inventory.html.twig
@@ -26,7 +26,7 @@
                         <h6>Argent : </h6>
                         <div>{{ user.argent }} <img style="width:20px;height:20px;" src="{{asset('images/coin.png')}}" alt="coin"></div><br>
                         <h6>PV :</h6>
-                        <div>{{ user.pvMax }} <img style="width:20px;height:20px;" src="{{asset('images/heart.png')}}" alt="coin"></div>
+                        <div>{{ user.pv }}/{{ user.pvMax }} <img style="width:20px;height:20px;" src="{{asset('images/heart.png')}}" alt="coin"></div>
                     </div>
                 </div>
                 <div class="container-xs col-sm-1" style="background-color: #b8daff"></div>
