--- a/templates/admin/bdd/showEnnemis.html.twig
+++ b/templates/admin/bdd/showEnnemis.html.twig
@@ -5,7 +5,7 @@
         <h1>Ennemis</h1>
         <br>
         <div class="row">
-            <a href="{{ path('ennemi_add') }}" class="btn btn-primary m-1 p-2"> Ajouter une ennemi </a>
+            <a href="{{ path('ennemi_add') }}" class="btn btn-primary m-1 p-2"> Ajouter un ennemi </a>
         </div>
         <br>
         <div>
