--- a/templates/infos.html.twig
+++ b/templates/infos.html.twig
@@ -2,7 +2,7 @@
 {% block body %}
 <div class="container">
     <br>
-    <div>Description du jeu, vous pouvez le télécharger ici : </div>
+    <h2>Description du jeu</h2>
     <a href="{{ path('download') }}">TÉLÉCHARGER</a>
 </div>
 {% endblock %}
