--- a/templates/admin/_nav.html.twig
+++ b/templates/admin/_nav.html.twig
@@ -2,7 +2,7 @@
 
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Projet Tut <span style="color:#ff0000;">  Menu Admin </span></a>
+    <a class="navbar-brand" href="{{ path('index_index')}}">Projet Tut <span style="color:#ff0000;">  Menu Admin </span></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
