Consultation et modification des informations

--- a/templates/admin/bdd/showArmes.html.twig
+++ b/templates/admin/bdd/showArmes.html.twig
@@ -5,7 +5,7 @@
         <h1>Armes</h1>
         <br>
         <div class="row">
-            <a href="{{ path('arme_add') }}" class="btn btn-primary m-1 p-2"> Ajouter une arme </a>
+            <a href="{{ path('user_edit') }}" class="btn btn-primary m-1 p-2"> Ajouter une arme </a>
         </div>
         <br>
         <div>
