--- a/templates/security/_formUser.html.twig
+++ b/templates/security/_formUser.html.twig
@@ -1,6 +1,6 @@
 {% form_theme form 'bootstrap_4_layout.html.twig' %}
 {{ form_start(form, {'attr': {'novalidate': 'novalidate', 'class': 'col-lg-5' }}) }}
-{{ form_row(form) }}
+{{ form_widget(form) }}
 <form action="submit" method="POST">
     <div class="g-recaptcha" data-sitekey="6LeLhwIaAAAAALEKZByY-XBWt6NqsIldqOI5HMFN"></div>
     <br/>
