--- a/templates/user/shop.html.twig
+++ b/templates/user/shop.html.twig
@@ -1,3 +1,27 @@
 {% extends "user/layout_user.html.twig" %}
 {% block body %}
+    <div class="container">
+        <div class="row">
+            {% for key,group in items  %}
+                {% for item in group %}
+                <div class="col-4 mt-4">
+                    <div class="border border-dark rounded p-2 clearfix">
+                        <h5>
+                            {{ item.nom }}
+                        </h5>
+                        <div style="font-size: medium">
+                            &emsp; {{ item.prix }}g l'unité
+                        </div>
+
+                        {%  if item.sprite is not empty %}
+                            <img class="img-fluid rounded"  style="width:50px;height:50px"  src="{{asset('sprites/')}}{{ key }}/{{item.sprite}}"  alt="image  de {{ item.nom }}" >
+                        {% endif %}
+                        <hr>
+                        <button class="btn-outline-success">Buy</button>
+                    </div>
+                </div>
+                {% endfor %}
+            {% endfor %}
+        </div>
+    </div>
 {% endblock %}
