Description du jeu

--- a/templates/infos.html.twig
+++ b/templates/infos.html.twig
@@ -3,6 +3,14 @@
 <div class="container">
     <br>
     <h2>Description du jeu</h2>
+    <div style="text-align: justify; text-justify: inter-word;">
+        [TITRE DU JEU] est un jeu d'aventure dans lequel vous explorez plusieurs étages d'un labyrinthe généré aléatoirement. Vous pourrez y trouver de nombreux objets pour vous aider dans votre progression ainsi que dans les combats contre les monstres qui vous barreront la route.
+    </div>
+    <br>
+    <div style="text-align: justify; text-justify: inter-word;">
+        En vous créant un compte sur ce site, il vous sera possible de sauvegarder votre progression en ligne afin de pouvoir retrouver sur n'importe quel ordinateur votre avancement. De plus, sur ce site vous pourrez consulter votre inventaire et d'autres informations sur les objets et ennemis du jeu pour mieux vous préparer à l'aventure.
+    </div>
+    <br>
     <a href="{{ path('download') }}">TÉLÉCHARGER</a>
 </div>
 {% endblock %}
