--- a/templates/user/shop.html.twig
+++ b/templates/user/shop.html.twig
@@ -17,7 +17,7 @@
                             <img class="img-fluid rounded"  style="width:50px;height:50px"  src="{{asset('sprites/')}}{{ key }}/{{item.sprite}}"  alt="image  de {{ item.nom }}" >
                         {% endif %}
                         <hr>
-                        <button class="btn-outline-success">Buy</button>
+                        <a class="btn btn-success" href="{{ path('shop.buy', {id: item.id, group: key} )}}">Buy</a>
                     </div>
                 </div>
                 {% endfor %}
