--- a/templates/user/inventory.html.twig
+++ b/templates/user/inventory.html.twig
@@ -43,14 +43,23 @@
             <div class="container-fluid" style="background-color: #ffd3b8;white-space: nowrap;overflow-x: scroll;overflow-y: hidden;border-radius: 10px;">
                 <br>
                 <div>
-                    <img id="sword1" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armes/epee.png')}}" alt="sprite" onclick="transfer(event)">
-                    <img id="sword2" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armes/epeeEnchant.png')}}" alt="sprite" onclick="transfer(event)">
-                    <img id="boots" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armures/botte.png')}}" alt="sprite" onclick="transfer(event)">
-                    <img id="jambes" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armures/jambières.png')}}" alt="sprite" onclick="transfer(event)">
-                    <img id="casque" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armures/casque.png')}}" alt="sprite" onclick="transfer(event)">
-                    <img id="chest" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armures/plastronD.png')}}" alt="sprite" onclick="transfer(event)">
-                    <img id="potion1" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/potions/potion.png')}}" alt="sprite" onclick="transfer(event)">
-                    <img id="potion2" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/potions/potionV.png')}}" alt="sprite" onclick="transfer(event)">
+                    {% if armes is not empty %}
+                        {% for arme in armes %}
+                            <img id="test" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armes/')}}{{arme.sprite}}" alt="sprite" onclick="transferSword(event)" >
+                        {% endfor %}
+                    {% endif %}
+
+                    {% if armures is not empty %}
+                        {% for armure in armures %}
+                            <img id="test" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/armures/')}}{{armure.sprite}}" alt="sprite" onclick="transferArmor(event, '{{ armure.nomType }}')" >
+                        {% endfor %}
+                    {% endif %}
+
+                    {% if potions is not empty %}
+                        {% for potion in potions %}
+                            <img id="test" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/potions/')}}{{potion.sprite}}" alt="sprite" onclick="transferPotion(event)" >
+                        {% endfor %}
+                    {% endif %}
                 </div>
                 <br>
             </div>
@@ -58,14 +67,27 @@
         <br>
     </div>
     <script>
-        let p = document.getElementsByClassName("item");
-        p.onclick = transfer();
-
-        function transfer(ev) {
-            let target = ev.target.id;
-            let type = target.className;
-            document.getElementById("drop5").appendChild(document.getElementById(target));
+        function transferSword(ev) {
+            document.getElementById("drop5").appendChild(document.getElementById(ev.target.id));
         }
-
+        function transferPotion(ev) {
+            document.getElementById("drop6").appendChild(document.getElementById(ev.target.id));
+        }
+        function transferArmor(ev,type) {
+            switch (type) {
+                case 'Casque':
+                    document.getElementById("drop1").appendChild(document.getElementById(ev.target.id));
+                    break;
+                case 'Plastron':
+                    document.getElementById("drop2").appendChild(document.getElementById(ev.target.id));
+                    break;
+                case 'Jambières':
+                    document.getElementById("drop3").appendChild(document.getElementById(ev.target.id));
+                    break;
+                case 'Chaussures':
+                    document.getElementById("drop4").appendChild(document.getElementById(ev.target.id));
+                    break;
+            }
+        }
     </script>
 {% endblock %}
